--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "vue-webhooks",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "nodemailer": "^6.7.5"
-  }
+    "name": "vue-webhooks",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "pm2 start ./webhook.js --watch --name webhook --watch",
+        "stop": "pm2 stop webhook"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "nodemailer": "^6.7.5"
+    }
 }
