--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "node "
+        "start": "pm2 start ./webhook.js --watch --name webhook --watch",
+        "stop": "pm2 stop webhook"
     },
     "keywords": [],
     "author": "",
